--- a/form.css
+++ b/form.css
@@ -5,7 +5,7 @@
 body {
 	background: #F3F5F9;
 	font-family: 'bellefair', sans-serif !important;
-	background: linear-gradient(0deg, rgba(133, 133, 133, 0.2), rgba(133, 133, 133, 0.2)), url("bg.jpg") center no-repeat scroll;
+	background: linear-gradient(0deg, rgba(133, 133, 133, 0.2), rgba(133, 133, 133, 0.2)), url("bg.png") center no-repeat scroll;
 	background-attachment: fixed;
 	background-position: center;
 	-webkit-background-size: cover;
